--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0026)https://www.nickuc.com/pt/ -->
 <html lang="pt"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
@@ -426,7 +425,7 @@ div[class="adsbygoogle"][id="ad-detector"] { display: block !important; }</style
 <header>
 <nav class="navbar">
 <div>
-<a class="logo animated fadeInDown" href="https://www.nickuc.com/pt/#" data-animate="fadeInDown" data-delay=".5" style="animation-delay: 0.5s;">
+<a class="logo animated fadeInDown" href="videoaula.tk" data-animate="fadeInDown" data-delay=".5" style="animation-delay: 0.5s;">
 <span>uTheusBanido</span>
 </a>
 </div>
