--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
-<meta name="author" content="NickUC">
+<meta name="author" content="uTheusBanido">
 <meta name="google" value="notranslate">
 <meta name="revisit-after" content="1 week">
 <meta name="robots" content="index,follow,noodp,noydir">
@@ -10,8 +10,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Início</title>
-<meta name="description" content="Qualidade, segurança e facilidade em primeiro lugar.">
-<meta name="keywords" content="nickuc, minecraft, plugins, plugin grátis">
+<meta name="description" content="best layer 7 firewall protection">
+<meta name="keywords" content="uTheusBanido, firewall, ddos">
 <link rel="icon" href="https://www.nickuc.com/static/assets/icons/favicon.ico">
 
 <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap">
@@ -445,7 +445,7 @@ div[class="adsbygoogle"][id="ad-detector"] { display: block !important; }</style
 <div style="text-align: center;">
 <h2>uTheusBanido Proteçao</h2>
 <p>
-Se voce conseguir derrubar esse site, voce ganha uma bonificação de 200 reais<a href="https://xvideos.com"> Porn</a>.
+If you manage to crash this site, you will receive a $200 bonus<a href="https://xvideos.com"> Porn</a>.
 </p>
 </div>
 </div>
