--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ div[class="adsbygoogle"][id="ad-detector"] { display: block !important; }</style
 <div style="text-align: center;">
 <h2>uTheusBanido Proteçao</h2>
 <p>
-If you manage to crash this site, you will receive a $200 bonus<a href="https://xvideos.com"> Porn</a>.
+If you manage to crash this site, you will receive a $200 bonus.
 </p>
 </div>
 </div>
