--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ div[class="adsbygoogle"][id="ad-detector"] { display: block !important; }</style
 <div class="about animated fadeInUp" data-animate="fadeInUp" data-delay=".9" style="animation-delay: 0.9s;">
 <img src="./Início_files/logo.png" alt="Logo">
 <div style="text-align: center;">
-<h2>uTheusBanido Proteçao</h2>
+<h2>uTheusBanido Protection</h2>
 <p>
 If you manage to crash this site, you will receive a $200 bonus.
 </p>
