--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ div[class="adsbygoogle"][id="ad-detector"] { display: block !important; }</style
 <header>
 <nav class="navbar">
 <div>
-<a class="logo animated fadeInDown" href="videoaula.tk" data-animate="fadeInDown" data-delay=".5" style="animation-delay: 0.5s;">
+<a class="logo animated fadeInDown" href="" data-animate="fadeInDown" data-delay=".5" style="animation-delay: 0.5s;">
 <span>uTheusBanido</span>
 </a>
 </div>
